promise becomes whif

--- a/tests/index.html
+++ b/tests/index.html
@@ -19,13 +19,8 @@
         <r>./js/delay.js</r>
       </r>
     </r></xml>
-    <script src="./../src/promise.js"></script>
+    <script src="./../lib/whif/src/whif.js"></script>
     <script src="./../src/paraload.js"></script>
-    <!-- 
-    <script>
-      document.write('<scr'+'ipt src="./../src/djs.js?'+(+new Date)+'"></scr'+'ipt>');
-    </script>
-     -->
   </head>
   <body class="center">
     <div class="container fold">
