--- a/tests/index.html
+++ b/tests/index.html
@@ -20,6 +20,7 @@
       </r>
     </r></xml>
     <script src="./../lib/whif/src/whif.js"></script>
+    <script src="./js/debug.js"></script>
     <script src="./../src/paraload.js"></script>
   </head>
   <body class="center">
