--- a/tests/index.html
+++ b/tests/index.html
@@ -9,14 +9,15 @@
     
     <title>djs - loader</title>
 
-    <link rel="stylesheet" href="./css/normalize.css"/>
-    <link rel="stylesheet" href="./css/main.css"/>
     <xml style="display:none"><r>
-      //ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js
-      //cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js
-      <r>
-        //cdnjs.cloudflare.com/ajax/libs/backbone.js/1.0.0/backbone-min.js
-        <r>./js/delay.js</r>
+      <r>./css/normalize.css
+        <r>./css/main.css</r>
+      </r>
+      <r>//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js
+        //cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js
+        <r>//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.0.0/backbone-min.js
+          <r>./js/delay.js</r>
+        </r>
       </r>
     </r></xml>
     <script src="./../lib/whif/src/whif.js"></script>
