--- a/test/index.html
+++ b/test/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <title>djs - loader</title>
+    <title>paraload - tests</title>
 
     <xml style="display:none"><r>
       <r>./css/normalize.css
